erDiagram
    APP_USERS ||--o{ APP_USER_ROLES : has
    APP_ROLES ||--o{ APP_USER_ROLES : assigned
    APP_ROLES ||--o{ APP_ROLE_PERMISSIONS : grants
    APP_PERMISSIONS ||--o{ APP_ROLE_PERMISSIONS : maps
    APP_USERS ||--o{ AUDIT_EVENTS : performs
    CARTORIOS ||--o{ CARTORIO_STATUS_HISTORY : records
    CARTORIOS ||--o{ CARTORIO_MANAGER_HISTORY : records
    CARTORIOS ||--o{ PRODUTIVIDADE_FLAGRANTES : owns
    CARTORIOS ||--o{ PRODUTIVIDADE_STATS_MONTHLY : closes
    IMPORT_BATCHES ||--o{ IMPORT_ITEMS : contains
    IMPORT_ITEMS ||--o| PRODUTIVIDADE_FLAGRANTES : confirms

